--- a/css/erosion-machine-timeline.scss
+++ b/css/erosion-machine-timeline.scss
@@ -1,17 +1,45 @@
 //
+//
+// outsourcing paradise erosion machine styles
+//
+// version progress bar: xx
+//
+@import "erosion-machine/_mixins.scss";
+
+//
+// fonts
+//
+@include font-face(Desdemona, HOST_NAME/data/outsourcing-paradise-parasite/fonts/Desdemona);
+@include font-face(BlackoakStd, HOST_NAME/data/outsourcing-paradise-parasite/fonts/BlackoakStd);
+@include font-face(BodoniOrnaments, HOST_NAME/data/outsourcing-paradise-parasite/fonts/BodoniOrnamentsITCTT);
+
+//
 // disable all video subtitles inside of video frame
 //
 video::cue {
-  opacity: 0;
+  background: none;
+  visibility: hidden;
+}
+
+video::cue-region {
+  background: none;
+  visibility: hidden;
+}
+
+//
+// timeline container overrides
+//
+.erosion-machine-container {
+  z-index: 16777281 !important;
 }
 
 //
 // SUBTITLES
 //
 .subtitle-box {
-  z-index: 1000000;
+  z-index: 16777281;
 
-  font-size: 10vh;
+  font-size: 8vh;
   position: fixed;
   bottom: 0;
   left: 0;
@@ -19,6 +47,10 @@ video::cue {
   text-align: center;
   color: gold;
   text-shadow: darkblue 1px 0 10px;
+
+  @include medium {
+    font-size: 10vh;
+  }
 }
 
 
@@ -27,10 +59,20 @@ video::cue {
 // DEFAULTS
 //
 //
+
 .erosion {
+  &-vertical-video {
+    width: 160px !important;
+    height: auto;
+
+    @include medium {
+      width: 280px !important;
+    }
+  }
+
   &.erosion-video {
     width: 640px;
-    height: 380px;
+    height: auto;
   }
 
   &.erosion-text {
@@ -39,5 +81,15 @@ video::cue {
   }
 }
 
+//
+//
+// components
+//
+//
 
-@import "erosion-machine/_watchdog.scss"
+@import "erosion-machine/_watchdog.scss";
+@import "erosion-machine/_kot-odin.scss";
+@import "erosion-machine/_outsourcing-orgy.scss";
+@import "erosion-machine/_water-in-office.scss";
+@import "erosion-machine/_pause.scss";
+@import "erosion-machine/_bare-videos.scss";
