[projects] addd mystery-covered-with-the-darkness and outsourcing-paradise

--- a/en/index.slim
+++ b/en/index.slim
@@ -4,6 +4,13 @@ aboutLabel: "ABOUT EEEFFF"
 template: "templates/index.html"
 ---
 li.new
+  a href="https://liquid-fiction.space/" target="_blank"
+    | Outsourcing paradise (parasite)
+li.new
+  a href="/en/projects/mystery-covered-with-the-darkness.html"
+    | Mystery covered with the darkness
+
+li.new
   a href="/en/projects/holed-futurism.html"
     | Holed Futurism
 li
