--- a/ru/index.slim
+++ b/ru/index.slim
@@ -5,6 +5,13 @@ template: "templates/index.html"
 ---
 
 li.new
+  a href="https://liquid-fiction.space/" target="_blank"
+    | Аутсорсинг-парадайз (паразит)
+li.new
+  a href="/ru/projects/mystery-covered-with-the-darkness.html"
+    | Тайна, прикрытая мраком
+
+li.new
   a href="/ru/projects/holed-futurism.html"
     | Дырявый Футуризм
 
