--- a/css/app.scss
+++ b/css/app.scss
@@ -181,7 +181,7 @@
 @import "automated-recreation-zone";
 
 @import "kapital-perplexed-species-manifesto";
-
+     
 @import "flow";
 
 /* @import "slick"; */
@@ -251,6 +251,15 @@
 }
 
 @font-face {
+  font-family: "AsimovIt";
+  src: url("../fonts/AsimovIt.otf");
+  /* src: local("☺"), */
+  /*   url("type/filename.woff") format("woff"), */
+  /*   url("type/filename.otf") format("opentype"), */
+  /*   url("type/filename.svg#filename") format("svg"); */
+}
+
+@font-face {
   font-family: "AsimovOu";
   src: url("../fonts/AsimovOu.otf");
   /* src: local("☺"), */
@@ -267,6 +276,34 @@
   /*   url("type/filename.otf") format("opentype"), */
   /*   url("type/filename.svg#filename") format("svg"); */
 }
+
+@font-face {
+  font-family: "InputMonoBlack";
+  src: url("../fonts/InputMono-Black.ttf");
+  /* src: local("☺"), */
+  /*   url("type/filename.woff") format("woff"), */
+  /*   url("type/filename.otf") format("opentype"), */
+  /*   url("type/filename.svg#filename") format("svg"); */
+}
+
+@font-face {
+  font-family: "InputMonoBlackItalic";
+  src: url("../fonts/InputMono-BlackItalic.ttf");
+  /* src: local("☺"), */
+  /*   url("type/filename.woff") format("woff"), */
+  /*   url("type/filename.otf") format("opentype"), */
+  /*   url("type/filename.svg#filename") format("svg"); */
+}
+
+@font-face {
+  font-family: "PhosphateInline";
+  src: url("../fonts/Phosphate-Inline.eot");
+  /* src: local("☺"), */
+  /*   url("type/filename.woff") format("woff"), */
+  /*   url("type/filename.otf") format("opentype"), */
+  /*   url("type/filename.svg#filename") format("svg"); */
+}
+
 
 
 
