[projects][OPPP] add layout for Outsourcing paradise post pub

--- a/css/app.scss
+++ b/css/app.scss
@@ -165,7 +165,10 @@
 @import "kapital-perplexed-species-manifesto";
 
 @import "flow";
+
 @import "subtitles-test";
+
+@import "outsourcing-paradise-post-pub";
 
 /* @import "slick"; */
 /* @import "slick-theme"; */
