[projects][OPP] add content for Outsourcing paradise post pub

--- a/en/index.slim
+++ b/en/index.slim
@@ -3,6 +3,9 @@ title: "home page"
 aboutLabel: "ABOUT EEEFFF"
 template: "templates/index.html"
 ---
+li.text.new
+  a href="/$lang$/projects/outsourcing-paradise-post-pub.html"
+    | Outsourcing paradise / transcript-hidden-structure (RU)
 li.new
   a href="https://liquid-fiction.space/" target="_blank"
     | Outsourcing paradise (parasite)
