--- a/ru/index.slim
+++ b/ru/index.slim
@@ -3,10 +3,12 @@ title: "домашнаяя страничка"
 aboutLabel: "O EEEFFF"
 template: "templates/index.html"
 ---
-
+li.text.new
+  a href="/$lang$/projects/outsourcing-paradise-post-pub.html"
+    | Аутсорсинговый рай / расшифровка-скрытая-структура
 li.new
   a href="https://liquid-fiction.space/" target="_blank"
-    | Аутсорсинг-парадайз (паразит)
+    | Аутсорсинговый рай
 li.new
   a href="/ru/projects/mystery-covered-with-the-darkness.html"
     | Тайна, прикрытая мраком
