--- a/templates/outsourcing-paradise-post-pub.slim
+++ b/templates/outsourcing-paradise-post-pub.slim
@@ -3,5 +3,5 @@ section.outsourcing-paradise-post-pub
     div
       h1
         | $title$
-  div.parallax-group
-  | $body$
+  div.oppp-parallax-group
+    | $body$
