[projects][scooters train session] add layout

--- a/css/app.scss
+++ b/css/app.scss
@@ -170,6 +170,8 @@
 
 @import "outsourcing-paradise-post-pub";
 
+@import "scooters-training-session";
+
 /* @import "slick"; */
 /* @import "slick-theme"; */
 
