--- a/templates/scooters-training-session.slim
+++ b/templates/scooters-training-session.slim
@@ -1,2 +1,12 @@
 section.scooters-walk
   | $body$
+  nav.scheme
+    a.scheme.link.active href="#" data-target="scheme"
+      = include_file "images/scooters-training-session/scheme-symbol.svg"
+    a.questions.link href="#" data-target="questions"
+      = include_file "images/scooters-training-session/questions-symbol.svg"
+    a.video.link href="#" data-target="video"
+      = include_file "images/scooters-training-session/video-symbol.svg"
+    a.info.link href="#" data-target="info"
+      = include_file "images/scooters-training-session/info-symbol.svg"
+
