[projects][scooters train session] add link to index page, new layout

--- a/en/index.slim
+++ b/en/index.slim
@@ -3,6 +3,9 @@ title: "home page"
 aboutLabel: "ABOUT EEEFFF"
 template: "templates/index.html"
 ---
+li.new
+  a href="/$lang$/projects/scooters-training-session.html"
+    | Training session "Who will get tired faster, you or the algorithms?"
 li.text.new
   a href="/$lang$/projects/outsourcing-paradise-transcript-hidden-structure.html"
     | Outsourcing paradise / transcript-hidden-structure (RU)
