--- a/ru/index.slim
+++ b/ru/index.slim
@@ -3,6 +3,9 @@ title: "домашнаяя страничка"
 aboutLabel: "O EEEFFF"
 template: "templates/index.html"
 ---
+li.new
+  a href="/$lang$/projects/scooters-training-session.html"
+    | Сессия-тренировка "Кто быстрее устанет, вы или алгоритмы?"
 li.text.new
   a href="/$lang$/projects/outsourcing-paradise-transcript-hidden-structure.html"
     | Аутсорсинговый рай / расшифровка-скрытая-структура
