[layout][project] add from the future to the past layout update layout for holed futurism

--- a/css/app.scss
+++ b/css/app.scss
@@ -172,6 +172,10 @@
 
 @import "scooters-training-session";
 
+@import "from-the-future-to-the-present";
+
+@import "holed-futurism";
+
 /* @import "slick"; */
 /* @import "slick-theme"; */
 
