[index][projects] add links to from-the-future-to-the-present

--- a/en/index.slim
+++ b/en/index.slim
@@ -19,6 +19,11 @@ li.new
 li.new
   a href="/en/projects/holed-futurism.html"
     | Holed Futurism
+
+li.new
+  a href="/$lang$/projects/from-the-future-to-the-present.html"
+    | Syntatic play situation "From the Future to the Present"
+
 li
   a href="/en/projects/error-friendly-networks.html"
     | error-friendly networks
