--- a/ru/index.slim
+++ b/ru/index.slim
@@ -20,6 +20,10 @@ li.new
   a href="/ru/projects/holed-futurism.html"
     | Дырявый Футуризм
 
+li.new
+  a href="/$lang$/projects/from-the-future-to-the-present.html"
+    | Синтетическая игровая ситуация "Из будущего в настоящее"
+
 li
   a href="/ru/projects/error-friendly-networks.html"
     | сети, дружелюбные к ошибкам
