[project] add pics to holde futurism page

--- a/en/projects/holed-futurism.slim
+++ b/en/projects/holed-futurism.slim
@@ -1,5 +1,7 @@
 ---
 title: "Holed Futurism"
 pdfUrl: "/data/eeefff-holed-futurism-en.pdf"
-template: "templates/pdf-text.slim"
+template: "templates/holed-futurism.slim"
+picCaptionKiev: "Holed Futurism near Kiev / 2019"
+picCaptionMoscowZil: "Holed Futurism in DK ZIL in Moscow / 2019"
 ---
