--- a/ru/projects/holed-futurism.slim
+++ b/ru/projects/holed-futurism.slim
@@ -1,5 +1,7 @@
 ---
 title: "Дырявый Футуризм"
 pdfUrl: "/data/eeefff-holed-futurism-ru.pdf"
-template: "templates/pdf-text.slim"
+template: "templates/holed-futurism.slim"
+picCaptionKiev: "Дырявый футуризм под Киевом / 2019"
+picCaptionMoscowZil: "Дырявый футуризм в ДК ЗИЛ в Москве / 2019"
 ---
