[project] add og images, change pic captions

--- a/en/projects/holed-futurism.slim
+++ b/en/projects/holed-futurism.slim
@@ -1,7 +1,8 @@
 ---
 title: "Holed Futurism"
 pdfUrl: "/data/eeefff-holed-futurism-en.pdf"
+og_image_url: /images/holed-futurism/og-image-en.png
 template: "templates/holed-futurism.slim"
-picCaptionKiev: "Holed Futurism near Kiev / 2019"
+picCaptionKiev: "Holed Futurism at the Digital Labour Symposium near Kiev / 2019"
 picCaptionMoscowZil: "Holed Futurism in DK ZIL in Moscow / 2019"
 ---
