--- a/ru/projects/holed-futurism.slim
+++ b/ru/projects/holed-futurism.slim
@@ -2,6 +2,7 @@
 title: "Дырявый Футуризм"
 pdfUrl: "/data/eeefff-holed-futurism-ru.pdf"
 template: "templates/holed-futurism.slim"
-picCaptionKiev: "Дырявый футуризм под Киевом / 2019"
+og_image_url: /images/holed-futurism/og-image-ru.png
+picCaptionKiev: "Дырявый футуризм на симпозиуме по Цифровому Труду под Киевом / 2019"
 picCaptionMoscowZil: "Дырявый футуризм в ДК ЗИЛ в Москве / 2019"
 ---
