[project][from-the-future-to-the-present] fix pics urls

--- a/templates/from-the-future-to-the-present.slim
+++ b/templates/from-the-future-to-the-present.slim
@@ -6,6 +6,6 @@ article.from-the-future-to-the-present
 
   - (1..15).each do |i|
     figure
-      img src="$basePicturesUrl$/from-the-future-to-the-present-#{i.to_s.rjust(2, '0')}.JPG"
+      img src="$basePicturesUrl$/from-the-future-to-the-present-#{i.to_s.rjust(2, '0')}.jpg"
       figcaption
         | $picCaption$
