[op][layout] add berliner gazette's timeline css

--- a/css/erosion-machine-timeline.scss
+++ b/css/erosion-machine-timeline.scss
@@ -41,7 +41,7 @@ video::cue-region {
 
   font-size: 8vh;
   position: fixed;
-  bottom: 0;
+  bottom: 10vh;
   left: 0;
   width: 100%;
   text-align: center;
@@ -87,9 +87,20 @@ video::cue-region {
 //
 //
 
+//
+// 2019
+//
 @import "erosion-machine/_watchdog.scss";
 @import "erosion-machine/_kot-odin.scss";
 @import "erosion-machine/_outsourcing-orgy.scss";
 @import "erosion-machine/_water-in-office.scss";
 @import "erosion-machine/_pause.scss";
 @import "erosion-machine/_bare-videos.scss";
+
+.blah {
+  color: red;
+}
+//
+// 2020
+//
+@import "erosion-machine/_test-timeline.scss";
