[index][toc] add RTV magazine OP link

--- a/en/index.slim
+++ b/en/index.slim
@@ -4,6 +4,9 @@ aboutLabel: "ABOUT EEEFFF"
 template: "templates/index.html"
 ---
 li.new
+  a href="http://magazynrtv.com/en/wydanie-11/kanal-sztuki/outsourcing-paradiseparasite/" target="_blank"
+    | Outsourcing paradise (parasite) @ RTV Magazine #11
+li.new
   a href="/$lang$/projects/scooters-training-session.html"
     | Training session "Who will get tired faster, you or the algorithms?"
 li.text.new
