--- a/ru/index.slim
+++ b/ru/index.slim
@@ -4,6 +4,9 @@ aboutLabel: "O EEEFFF"
 template: "templates/index.html"
 ---
 li.new
+  a href="http://magazynrtv.com/en/wydanie-11/kanal-sztuki/outsourcing-paradiseparasite/" target="_blank"
+    | Аутсорсинговый рай @ RTV Magazine #11
+li.new
   a href="/$lang$/projects/scooters-training-session.html"
     | Сессия-тренировка "Кто быстрее устанет, вы или алгоритмы?"
 li.text.new
