--- a/templates/default.html
+++ b/templates/default.html
@@ -40,9 +40,9 @@
     <!-- <script type="text/javascript">
          jQuery(document).foundation();
          </script> -->
-    <script>
-         eeefff_org_website.core.init();
-    </script>
+    <!-- <script> -->
+    <!--      eeefff_org_website.core.init(); -->
+    <!-- </script> -->
      <script>
      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -52,6 +52,13 @@
      ga('create', 'UA-76397130-1', 'auto');
      ga('send', 'pageview');
 
-    </script>
+     </script>
+     <!-- <script type="text/javascript" src="https://dev.eeefff.org/js/erosion-machine-timeline-v2.js?$revision$"></script> -->
+
+     <script type="text/javascript" src="/js/op-erosion-machine-runtime-main.js?$revision$"></script>
+     <script type="text/javascript" src="/js/op-erosion-machine-vendors-main.js?$revision$"></script>
+     <script type="text/javascript" src="/js/op-erosion-machine-prelude.js?$revision$"></script>
+     <script type="text/javascript" src="/js/op-erosion-machine-main-chunk.js?$revision$"></script>
+
   </body>
 </html>
