--- a/templates/header.html
+++ b/templates/header.html
@@ -13,8 +13,10 @@ $if(customHead)$
 $includeFile(customHead)$
 $endif$
 
-<link href="/css/app.css?$revision$" rel="stylesheet" type="text/css"  />
+<link href="/css/app.css?$revision$" rel="stylesheet" type="text/css"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/motion-ui/1.1.1/motion-ui.min.css" />
+<link href="/css/erosion-machine-timeline.css?$revision$" rel="stylesheet" type="text/css"  />
+
 
 <script type="text/javascript" src="/js/vendor/jquery.js"></script>
 <script type="text/javascript" src="/js/vendor/jquery.mobile.custom.min.js"></script>
@@ -30,4 +32,4 @@ $endif$
 <script type="text/javascript" src="/js/vendor/lodash.min.js"></script>
 <script type="text/javascript" src="/js/vendor/d3-queue.js"></script>
 <script type="text/javascript" src="/js/app.js?$revision$"></script>
-<script type="text/javascript" src="/js/compiled/out/main.js?$revision$"></script>
+<!-- <script type="text/javascript" src="/js/compiled/out/main.js?$revision$"></script> -->
