[op][layout] update for new css classes

--- a/css/erosion-machine/_outsourcing-orgy.scss
+++ b/css/erosion-machine/_outsourcing-orgy.scss
@@ -23,10 +23,10 @@
 //
 //
 // add-class outsourcing-orgy-image-growing
-// outsourcing-orgy-image-growing -> #outsourcing-orgy-image
+// outsourcing-orgy-image-growing -> outsourcing-orgy-image
 //
 //
-#outsourcing-orgy-image.erosion.outsourcing-orgy-image-growing {
+.outsourcing-orgy-image.erosion.outsourcing-orgy-image-growing {
   transform: scaleY(10);
   transition: all 4s ease-in;
 }
