[op][css] add splash screen and overlay layouts

--- a/css/erosion-machine-timeline.scss
+++ b/css/erosion-machine-timeline.scss
@@ -103,4 +103,6 @@ video::cue-region {
 //
 // 2020
 //
+@import "erosion-machine/_splash-screen.scss";
+@import "erosion-machine/_overlay.scss";
 @import "erosion-machine/_test-timeline.scss";
