--- a/css/erosion-machine/_mixins.scss
+++ b/css/erosion-machine/_mixins.scss
@@ -55,3 +55,11 @@
     @content;
   }
 }
+
+@mixin transition-all($duration) {
+  -webkit-transition: all $duration linear;
+  -moz-transition: all $duration linear;
+  -o-transition: all $duration linear;
+  -ms-transition: all $duration linear;
+  transition: all $duration linear;
+}
