--- a/css/app.scss
+++ b/css/app.scss
@@ -1,95 +1,144 @@
 @charset 'utf-8';
 
 @import "app_settings";
+
+//
+// old foundation config
+//
+// @import "foundation";
+
+
+// @import 'global';
+// @import 'typography/typography';
+// // Components
+
+// //
+// // grids
+// //
+// @import 'grid/grid';
+// // USE XY GRID
+// @import 'xy-grid/xy-grid';
+
+// @include foundation-flex-classes;
+// // @include foundation-flex-grid;
+
+// @import 'typography/typography';
+// // @import 'forms/forms';
+// @import 'components/visibility';
+// @import 'components/float';
+// // @import 'components/button';
+// // @import 'components/button-group';
+// // @import 'components/accordion-menu';
+// // @import 'components/accordion';
+// // @import 'components/badge';
+// // @import 'components/breadcrumbs';
+// // @import 'components/callout';
+// // @import 'components/card';
+// // @import 'components/close-button';
+// // @import 'components/drilldown';
+// // @import 'components/dropdown-menu';
+// // @import 'components/dropdown';
+// @import 'components/flex';
+// @import 'components/responsive-embed';
+// // @import 'components/label';
+// @import 'components/media-object';
+// // @import 'components/menu';
+// // @import 'components/menu-icon';
+// // @import 'components/off-canvas';
+// @import 'components/orbit';
+// // @import 'components/pagination';
+// // @import 'components/progress-bar';
+// // @import 'components/reveal';
+// // @import 'components/slider';
+// // @import 'components/sticky';
+// // @import 'components/switch';
+// // @import 'components/table';
+// // @import 'components/tabs';
+// // @import 'components/title-bar';
+// // @import 'components/top-bar';
+// // @import 'components/thumbnail';
+// // @import 'components/tooltip';
+// // @import 'prototype/prototype';
+
+// // @include motion-ui-transitions;
+// // @include motion-ui-animations;
+
+// @include foundation-media-object;
+// @include foundation-global-styles;
+// @include foundation-grid;
+// @include foundation-typography;
+// // @include foundation-button;
+// // @include foundation-forms;
+// @include foundation-visibility-classes;
+// @include foundation-float-classes;
+// // @include foundation-dropdown;
+// // @include foundation-dropdown-menu;
+// // @include foundation-menu;
+// // @include foundation-sticky;
+// // @include foundation-top-bar;
+// @include foundation-orbit;
+// @include foundation-responsive-embed;
+
+//
+// new foundation config
+//
 @import "foundation";
-// @import "motion-ui";
+// @include foundation-everything(false);
 
-
-// custom foundation;
-// Dependencies
-// @import '../_vendor/normalize-scss/normalize';
-// @import '../_vendor/sassy-lists/stylesheets/helpers/missing-dependencies';
-// @import '../_vendor/sassy-lists/stylesheets/helpers/true';
-// @import '../_vendor/sassy-lists/stylesheets/functions/contain';
-// @import '../_vendor/sassy-lists/stylesheets/functions/purge';
-// @import '../_vendor/sassy-lists/stylesheets/functions/remove';
-// @import '../_vendor/sassy-lists/stylesheets/functions/replace';
-// @import '../_vendor/sassy-lists/stylesheets/functions/to-list';
-
-
-@import 'global';
-@import 'typography/typography';
-// Components
-
-//
-// grids
-//
-@import 'grid/grid';
-
-
-// USE XY GRID
-@import 'xy-grid/xy-grid';
-
-@include foundation-flex-classes;
-// и@include foundation-flex-grid;
-
-@import 'typography/typography';
-// @import 'forms/forms';
-@import 'components/visibility';
-@import 'components/float';
-// @import 'components/button';
-// @import 'components/button-group';
-// @import 'components/accordion-menu';
-// @import 'components/accordion';
-// @import 'components/badge';
-// @import 'components/breadcrumbs';
-// @import 'components/callout';
-// @import 'components/card';
-// @import 'components/close-button';
-// @import 'components/drilldown';
-// @import 'components/dropdown-menu';
-// @import 'components/dropdown';
-@import 'components/flex';
-@import 'components/responsive-embed';
-// @import 'components/label';
-@import 'components/media-object';
-// @import 'components/menu';
-// @import 'components/menu-icon';
-// @import 'components/off-canvas';
-@import 'components/orbit';
-// @import 'components/pagination';
-// @import 'components/progress-bar';
-// @import 'components/reveal';
-// @import 'components/slider';
-// @import 'components/sticky';
-// @import 'components/switch';
-// @import 'components/table';
-// @import 'components/tabs';
-// @import 'components/title-bar';
-// @import 'components/top-bar';
-// @import 'components/thumbnail';
-// @import 'components/tooltip';
-// @import 'prototype/prototype';
-
-// @include motion-ui-transitions;
-// @include motion-ui-animations;
-
-@include foundation-media-object;
+// Global styles
 @include foundation-global-styles;
-@include foundation-grid;
-@include foundation-typography;
-// @include foundation-button;
 // @include foundation-forms;
-@include foundation-visibility-classes;
-@include foundation-float-classes;
+@include foundation-typography;
+
+// Grids (choose one)
+@include foundation-xy-grid-classes;
+// @include foundation-grid;
+@include foundation-flex-grid;
+
+// Generic components
+// @include foundation-button;
+// @include foundation-button-group;
+// @include foundation-close-button;
+// @include foundation-label;
+// @include foundation-progress-bar;
+// @include foundation-slider;
+// @include foundation-switch;
+// @include foundation-table;
+// Basic components
+// @include foundation-badge;
+// @include foundation-breadcrumbs;
+// @include foundation-callout;
+// @include foundation-card;
 // @include foundation-dropdown;
-// @include foundation-dropdown-menu;
-// @include foundation-menu;
-// @include foundation-sticky;
-// @include foundation-top-bar;
+// @include foundation-pagination;
+// @include foundation-tooltip;
+
+// Containers
+@include foundation-accordion;
+@include foundation-media-object;
 @include foundation-orbit;
 @include foundation-responsive-embed;
+// @include foundation-tabs;
+// @include foundation-thumbnail;
+// Menu-based containers
+// @include foundation-menu;
+// @include foundation-menu-icon;
+// @include foundation-accordion-menu;
+// @include foundation-drilldown-menu;
+// @include foundation-dropdown-menu;
 
+// Layout components
+// @include foundation-off-canvas;
+// @include foundation-reveal;
+// @include foundation-sticky;
+// @include foundation-title-bar;
+// @include foundation-top-bar;
+
+// Helpers
+// @include foundation-float-classes;
+@include foundation-flex-classes;
+@include foundation-visibility-classes;
+// @include foundation-prototype-classes;
 
 //
 //
