[projects] add economic orangery description and GM page

--- a/en/index.slim
+++ b/en/index.slim
@@ -4,6 +4,9 @@ aboutLabel: "ABOUT EEEFFF"
 template: "templates/index.html"
 ---
 li.new
+  a href="/$lang$/projects/economic-orangery-2021.html"
+    | Economic Orangery 2021
+li.new
   a href="http://magazynrtv.com/en/wydanie-11/kanal-sztuki/outsourcing-paradiseparasite/" target="_blank"
     | Outsourcing paradise (parasite) @ RTV Magazine #11
 li.new
@@ -15,15 +18,15 @@ li.text.new
 li.new
   a href="https://liquid-fiction.space/" target="_blank"
     | Outsourcing paradise (parasite)
-li.new
+li
   a href="/en/projects/mystery-covered-with-the-darkness.html"
     | Mystery covered with the darkness
 
-li.new
+li
   a href="/en/projects/holed-futurism.html"
     | Holed Futurism
 
-li.new
+li
   a href="/$lang$/projects/from-the-future-to-the-present.html"
     | Syntatic play situation "From the Future to the Present"
 
