[layout][projects][OP] add erosionDisabled input onto all pages

--- a/templates/default.html
+++ b/templates/default.html
@@ -35,6 +35,11 @@
     </a>
     $endif$
 
+    $if(erosionDisabled)$
+    <input id="erosion-disabled" value="true" type="hidden"/>
+    $endif$
+
+
     <!-- <div id="main-app"></div> -->
     $body$
     <!-- <script type="text/javascript">
