--- a/ru/index.slim
+++ b/ru/index.slim
@@ -4,6 +4,9 @@ aboutLabel: "O EEEFFF"
 template: "templates/index.html"
 ---
 li.new
+  a href="/$lang$/projects/economic-orangery-2021.html"
+    | Экономическая Оранжерея 2021
+li.new
   a href="http://magazynrtv.com/en/wydanie-11/kanal-sztuki/outsourcing-paradiseparasite/" target="_blank"
     | Аутсорсинговый рай @ RTV Magazine #11
 li.new
@@ -15,15 +18,15 @@ li.text.new
 li.new
   a href="https://liquid-fiction.space/" target="_blank"
     | Аутсорсинговый рай
-li.new
+li
   a href="/ru/projects/mystery-covered-with-the-darkness.html"
     | Тайна, прикрытая мраком
 
-li.new
+li
   a href="/ru/projects/holed-futurism.html"
     | Дырявый Футуризм
 
-li.new
+li
   a href="/$lang$/projects/from-the-future-to-the-present.html"
     | Синтетическая игровая ситуация "Из будущего в настоящее"
 
