--- a/css/erosion-machine/_splash-screen.scss
+++ b/css/erosion-machine/_splash-screen.scss
@@ -42,7 +42,7 @@
 
     text-transform: uppercase;
     text-decoration: underline;
-    cursor: zoom-in;
+    cursor: pointer;
 
     text-decoration-line: underline;
     text-decoration-style: wavy;
