--- a/css/_outsourcing-paradise-post-pub.scss
+++ b/css/_outsourcing-paradise-post-pub.scss
@@ -104,6 +104,8 @@ $oppp-perspective: 1px;
 
   transform: translateZ($distance) scale(1 + ($distance * -1) / $oppp-perspective);
 
+  transform-style: flat;
+
 }
 
 section.outsourcing-paradise-post-pub {
@@ -158,14 +160,18 @@ section.outsourcing-paradise-post-pub {
   }
 
   article.post-pub-2 {
+    font-family: Asimov;
 
     p,
     h3,
     li {
       @include oppp-text;
+
+      transform-style: preserve-3d;
     }
 
     height: 100vh;
+    transform-style: flat;
 
     h3.time {
       text-align: right;
