[projects][OP][erosion] diable erosion by default, enable on several pages

--- a/templates/default.html
+++ b/templates/default.html
@@ -35,7 +35,8 @@
     </a>
     $endif$
 
-    $if(erosionDisabled)$
+    $if(erosionEnabled)$
+    $else$
     <input id="erosion-disabled" value="true" type="hidden"/>
     $endif$
 
