[index] add OP and ecology of attention text

--- a/en/index.slim
+++ b/en/index.slim
@@ -2,22 +2,20 @@
 title: "home page"
 aboutLabel: "ABOUT EEEFFF"
 template: "templates/index.html"
+erosionEnabled: true
 ---
+li.new.text
+  a href="https://www.ecology-attention.mmpraxis.com/contributions/eeefff/" target="_blank"
+    | All you need now is in pinned messages
 li.new
   a href="/$lang$/projects/economic-orangery-2021.html"
     | Economic Orangery 2021
 li.new
-  a href="http://magazynrtv.com/en/wydanie-11/kanal-sztuki/outsourcing-paradiseparasite/" target="_blank"
-    | Outsourcing paradise (parasite) @ RTV Magazine #11
+  a href="/$lang$/projects/outsourcing-paradise.html"
+    | Outsourcing paradise (parasite)
 li.new
   a href="/$lang$/projects/scooters-training-session.html"
     | Training session "Who will get tired faster, you or the algorithms?"
-li.text.new
-  a href="/$lang$/projects/outsourcing-paradise-transcript-hidden-structure.html"
-    | Outsourcing paradise / transcript-hidden-structure (RU)
-li.new
-  a href="https://liquid-fiction.space/" target="_blank"
-    | Outsourcing paradise (parasite)
 li
   a href="/en/projects/mystery-covered-with-the-darkness.html"
     | Mystery covered with the darkness
