--- a/ru/index.slim
+++ b/ru/index.slim
@@ -2,22 +2,20 @@
 title: "домашнаяя страничка"
 aboutLabel: "O EEEFFF"
 template: "templates/index.html"
+erosionEnabled: true
 ---
+li.new.text
+  a href="https://www.ecology-attention.mmpraxis.com/contributions/eeefff/" target="_blank"
+    | All you need now is in pinned messages (en)
 li.new
   a href="/$lang$/projects/economic-orangery-2021.html"
     | Экономическая Оранжерея 2021
 li.new
-  a href="http://magazynrtv.com/en/wydanie-11/kanal-sztuki/outsourcing-paradiseparasite/" target="_blank"
-    | Аутсорсинговый рай @ RTV Magazine #11
+  a href="/$lang$/projects/outsourcing-paradise.html"
+    | Аутсорсинговый рай (паразит)
 li.new
   a href="/$lang$/projects/scooters-training-session.html"
     | Сессия-тренировка "Кто быстрее устанет, вы или алгоритмы?"
-li.text.new
-  a href="/$lang$/projects/outsourcing-paradise-transcript-hidden-structure.html"
-    | Аутсорсинговый рай / расшифровка-скрытая-структура
-li.new
-  a href="https://liquid-fiction.space/" target="_blank"
-    | Аутсорсинговый рай
 li
   a href="/ru/projects/mystery-covered-with-the-darkness.html"
     | Тайна, прикрытая мраком
